--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -49,7 +49,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-[EAS]-Simple-Kernel-R7_v0.0.1"
+CONFIG_LOCALVERSION="-[EAS]-Simple-Kernel-R7_v0.0.2"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -310,12 +310,12 @@ CONFIG_IOSCHED_ANXIETY=y
 CONFIG_IOSCHED_ZEN=y
 # CONFIG_IOSCHED_BFQ is not set
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_CFQ is not set 
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_ANXIETY is not set
 # CONFIG_DEFAULT_MAPLE is not set
-# CONFIG_DEFAULT_ZEN is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_ZEN=y
+CONFIG_DEFAULT_IOSCHED="zen"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -592,8 +592,8 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
-CONFIG_SCHEDUTIL_UP_RATE_LIMIT=500
-CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=20000
+CONFIG_SCHEDUTIL_UP_RATE_LIMIT=20000
+CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=500
 
 #
 # CPU frequency scaling drivers
@@ -677,11 +677,11 @@ CONFIG_TCP_CONG_CDG=y
 # CONFIG_DEFAULT_HYBLA is not set
 # CONFIG_DEFAULT_VEGAS is not set
 # CONFIG_DEFAULT_VENO is not set
-CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_YEAH=y
 # CONFIG_DEFAULT_DCTCP is not set
 # CONFIG_DEFAULT_CDG is not set
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="westwood"
+CONFIG_DEFAULT_TCP_CONG="yeah"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
