mm: add Kconfig interface for vmstat interval
Signed-off-by: Tyler Nijmeh <tylernij@gmail.com>
Signed-off-by: kdrag0n <dragon@khronodragon.com>
Signed-off-by: celtare21 <celtare21@gmail.com>
Signed-off-by: Ratoriku <a1063021545@gmail.com>

&&

defconfig: increase vmstat interval to 20 seconds (trying 30 )

According to the documentation, vmstat updates can cause jitter.

Signed-off-by: kdrag0n <dragon@khronodragon.com>
Signed-off-by: celtare21 <celtare21@gmail.com>
Signed-off-by: Ratoriku <a1063021545@gmail.com>
	modified:   arch/arm64/configs/lavender-perf_defconfig
	modified:   mm/Kconfig
	modified:   mm/vmstat.c

--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -310,7 +310,7 @@ CONFIG_IOSCHED_ANXIETY=y
 CONFIG_IOSCHED_ZEN=y
 # CONFIG_IOSCHED_BFQ is not set
 # CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_CFQ is not set 
+# CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_ANXIETY is not set
 # CONFIG_DEFAULT_MAPLE is not set
@@ -470,6 +470,7 @@ CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 CONFIG_FRAME_VECTOR=y
 CONFIG_FORCE_ALLOC_FROM_DMA_ZONE=y
 CONFIG_PROCESS_RECLAIM=y
+CONFIG_VMSTAT_INTERVAL=30
 CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 CONFIG_SPECULATIVE_PAGE_FAULT=y
 # CONFIG_SECCOMP is not set
