--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -49,7 +49,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-[EAS]-Simple-Kernel-R7_v0.0.0"
+CONFIG_LOCALVERSION="-[EAS]-Simple-Kernel-R7HL_v0.0.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -97,7 +97,7 @@ CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_TICK_CPU_ACCOUNTING is not set
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_SCHED_WALT=y
+# CONFIG_SCHED_WALT is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
@@ -135,8 +135,8 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 # Scheduler features
 #
 # CONFIG_PELT_HALFLIFE_32 is not set
-CONFIG_PELT_HALFLIFE_16=y
-# CONFIG_PELT_HALFLIFE_12 is not set
+# CONFIG_PELT_HALFLIFE_16 is not set
+CONFIG_PELT_HALFLIFE_12=y
 # CONFIG_PELT_HALFLIFE_8 is not set
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
