--- a/arch/arm/boot/dts/qcom/sdm660-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660-regulator.dtsi
@@ -749,10 +749,10 @@
 				qcom,cpr-voltage-ceiling =
 					< 724000  724000  724000  788000  868000
 					 1068000 1068000 1068000>;
-
+                                /* Floor: -50mv */
 				qcom,cpr-voltage-floor =
-					<588000  588000  596000  652000  712000
-					 744000  784000  844000>;
+					<538000  538000  546000  602000  662000
+					 694000  734000  794000>;
 
 				qcom,corner-frequencies =
 					/* Speed bin 0 */
